# srvOuve

./: README.md  buildlinux.sh  srvouve-1.0_amd64.deb
python/: srvouve.py
sphinxbase/: sphinxbase.exp  sphinxbase.lib
src/: Makefile  compile_c.sh  ouve.c  ps_boilerplate  run_c.sh  srvouve  teste  teste.c
srv/: Makefile  ouve.c  srvOuve
srvlin/: .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake  ouve.cpp  rules.ninja  srvOuve  teste2.c
srvlin/model/: Makefile  Makefile.in
srvouve/DEBIAN/: control
srvouve/etc/systemd/system/: srvouve.service
srvwin/srvOuve/: main.cpp  resource.h  srvOuve.aps  srvOuve.sln  srvOuve.vcxproj  srvOuve.vcxproj.filters
srvwin/srvOuve/x64/Debug/: vc143.idb
srvwin/srvOuve/x64/Debug/srvOuve.tlog/: srvOuve.lastbuildstate
